--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="left_side">
             <div class="about_me">
                 <img src="./images/profile.jpg" alt="profile image">
-                <h2>John Doe</h2>
+                <h2>Mohamed Latrach</h2>
                 <h3>Web Developer</h3>
             </div>
             <div class="contact_info">
@@ -21,19 +21,19 @@
                 <ul>
                     <li>
                         <i class="fa-solid fa-phone"></i>
-                        <span class="text">+216 99 999 999</span>
+                        <span class="text">+216 52 661 762</span>
                     </li>
                     <li>
                         <i class="fa-regular fa-envelope"></i>
-                        <span class="text">john_doe@email.com</span>
+                        <span class="text">mohamedlatrach267@email.com</span>
                     </li>
-                    <li>
+                    <!--li>
                         <i class="fa-solid fa-globe"></i>
                         <span class="text">www.mywebsite.com</span>
-                    </li>
+                    </li-->
                     <li>
                         <i class="fa-brands fa-linkedin-in"></i>
-                        <span class="text">www.linkedin.com/me</span>
+                        <span class="text">https://www.linkedin.com/in/mohamed-latrach-a878122b3/</span>
                     </li>
                     <li>
                         <i class="fa-solid fa-location-dot"></i>
@@ -45,20 +45,20 @@
                 <h3 class="title">Education</h3>
                 <ul>
                     <li>
-                        <h4>2010 - 2012</h4>
+                        <h4>2023 - 2024</h4>
                         <h5 class="degree">Master Degree in Computer Science</h5>
-                        <h5>University Name</h5>
+                        <h5>DevMastery Coding School</h5>
                     </li>
                     <li>
-                        <h4>2007 - 2010</h4>
+                        <h4>2017 - 2021</h4>
                         <h5 class="degree">Applied Degree in Computer Science</h5>
-                        <h5>University Name</h5>
+                        <h5>High School City El Habib</h5>
                     </li>
-                    <li>
+                    <!--li>
                         <h4>2006 - 2007</h4>
                         <h5 class="degree">Bachelor Degree in Computer Science</h5>
                         <h5>High School Name</h5>
-                    </li>
+                    </li-->
                 </ul>
             </div>
             <div class="languages">
@@ -67,19 +67,19 @@
                     <li>
                         <span class="language_name">English</span>
                         <div class="percent_container">
-                            <div class="percent" style="width: 80%;"></div>
+                            <div class="percent" style="width: 95%;"></div>
                         </div>
                     </li>
                     <li>
                         <span class="language_name">French</span>
                         <div class="percent_container">
-                            <div class="percent" style="width: 48%;"></div>
+                            <div class="percent" style="width: 75%;"></div>
                         </div>
                     </li>
                     <li>
                         <span class="language_name">Arabic</span>
                         <div class="percent_container">
-                            <div class="percent" style="width: 90%;"></div>
+                            <div class="percent" style="width: 100%;"></div>
                         </div>
                     </li>
                 </ul>
@@ -89,17 +89,17 @@
             <div class="profile">
                 <h2 class="title">Profile</h2>
                 <!--lorem35 (example) -->
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus, voluptatum culpa. Inventore vitae dolorem nesciunt saepe, fuga sequi error omnis animi repudiandae reiciendis odio perspiciatis debitis harum dolores nam molestias tempore nobis optio aliquam Iure</p>
+                <p>Exceptionally creative and dependable Entry Level Web Developer with a strong knowledge in front-end and back-end development. Strong knowledge of HTML, CSS, JavaScript and React as well as the principles and techniques of website construction and maintenance. Highly adept at conveying complex technical information to a variety of professional and lay audiences in a clear and understandable manner.</p>
                 <br>
                 <!--lorem25 (example) -->
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto culpa eum magni iure? Et deserunt labore impedit recusandae non vel libero sint laborum asperiores doloribus?</p>
+                <!--p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto culpa eum magni iure? Et deserunt labore impedit recusandae non vel libero sint laborum asperiores doloribus?</p-->
             </div>
             <div class="experience">
                 <h2 class="title">Experience</h2>
                 <div class="box">
                     <div class="year_company">
                         <h5>2019 - Present</h5>
-                        <h5>Company Name</h5>
+                        <h5>FreeLancing</h5>
                     </div>
                     <div class="content">
                         <h4>Senior UX Designer</h4>
@@ -114,7 +114,7 @@
                     </div>
                     <div class="content">
                         <h4>UX/UI Designer</h4>
-                        <!--lorem15 (example) -->
+                        <lorem15 (example) >
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime molestias ab voluptatem nam odio velit.</p>
                     </div>
                 </div>
